--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <a href="kai.html" >kai's profile</a>
+    <a href="Bill_Personal_Website">Bill's profile</a>
   </body>
 </html>
