update kathy html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body>
     <a href="kai.html" >kai's profile</a>
     <a href="Bill_Personal_Website">Bill's profile</a>
+    <a href="kathyFirst.html">Kathy's profile</a>
   </body>
 </html>
