--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <title>Group A</title>
   </head>
   <body>
-    <a href="kai.html" >kai's profile</a>
-    <a href="Bill_Personal_Website">Bill's profile</a>
-    <a href="kathyFirst.html">Kathy's profile</a>
+    <h1>Hello, Here is everyone</h1>
+    <ul>
+      <li><a href="kai.html" >kai's profile</a></li>
+      <li><a href="Bill_Personal_Website.html">Bill's profile</a></li>
+      <li><a href="kathyFirst.html">Kathy's profile</a></li>
+      <li><a href="#">Rock's profile</a></li>
+    </ul>
   </body>
 </html>
