Rock's first web page.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <a href="kai.html" >kai's profile</a>
     <a href="Bill_Personal_Website">Bill's profile</a>
     <a href="kathyFirst.html">Kathy's profile</a>
+    <a href="rock.html">Rock's profile</a>
   </body>
 </html>
