--- a/index.html
+++ b/index.html
@@ -5,19 +5,12 @@
     <title>Group A</title>
   </head>
   <body>
-<<<<<<< HEAD
-    <a href="kai.html" >kai's profile</a>
-    <a href="Bill_Personal_Website">Bill's profile</a>
-    <a href="kathyFirst.html">Kathy's profile</a>
-    <a href="rock.html">Rock's profile</a>
-=======
     <h1>Hello, Here is everyone</h1>
     <ul>
       <li><a href="kai.html" >kai's profile</a></li>
       <li><a href="Bill_Personal_Website.html">Bill's profile</a></li>
       <li><a href="kathyFirst.html">Kathy's profile</a></li>
-      <li><a href="#">Rock's profile</a></li>
+      <li><a href="rock.html">Rock's profile</a></li>
     </ul>
->>>>>>> 18ad956c06a788f350b10033f39f9c952f27b6e4
   </body>
 </html>
