--- a/rock.html
+++ b/rock.html
@@ -5,6 +5,6 @@
     <title>Hello from Rock</title>
   </head>
   <body>
-    <h1>Hello I am Kai</h1>
+    <h1>Hello I am Rock</h1>
   </body>
 </html>
