--- a/public/kathy-v2.html
+++ b/public/kathy-v2.html
@@ -25,17 +25,30 @@
 <body>
 <div class="container">
     <div class="row">
-        <img src="kathy-img.jpg" style="margin:0 auto" alt="">
+        <div class="col-md-6">
+            <h1>分林分班 自信成长</h1>
+        </div>
+        <div class="col-md-6">
+            <img src="kathy-img.jpg" alt="">
+        </div>
     </div>
+    <h2>商品介绍</h2>
     <div class="row">
-        <div class="first col-md-6 col-lg-4">
-            My name is Kathy
+        <div class="col-sm-6 col-lg-3">
+            <h3 class="text-center">7-12月龄</h3>
+            <p>学习版 : 2011/09 - 2012/08生</p>
         </div>
-        <div class="second col-md-6 col-lg-4">
-            I have two children
+        <div class="col-sm-6 col-lg-3">
+                <h3>7-12月龄</h3>
+                <p>学习版 : 2011/09 - 2012/08生</p>
         </div>
-        <div class="third col-md-6 col-lg-4">
-            I am from HeiLongJiang
+        <div class="col-sm-6 col-lg-3">
+                <h3>7-12月龄</h3>
+                <p>学习版 : 2011/09 - 2012/08生</p>
+        </div>
+        <div class="col-sm-6 col-lg-3">
+                <h3>7-12月龄</h3>
+                <p>学习版 : 2011/09 - 2012/08生</p>
         </div>
     </div>
 </div>
