--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Group A</title>
-  </head>
-  <body>
-    <h1>Hello, Here is everyone</h1>
-    <ul>
-      <li><a href="kai.html" >kai's profile</a></li>
-      <li><a href="Bill_Personal_Website.html">Bill's profile</a></li>
-      <li><a href="kathyFirst.html">Kathy's profile</a></li>
-      <li><a href="rock.html">Rock's profile</a></li>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy"
+    crossorigin="anonymous">
+  <title>group a</title>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-sm bg-light">
+
+    <!-- Links -->
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Kathy</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Bill</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Rock</a>
+      </li>
     </ul>
-  </body>
+
+  </nav>
+
+  <div class="container">
+      <div class="jumbotron">
+          <h1>Group A</h1> 
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus sunt architecto delectus beatae a rerum velit recusandae quasi distinctio dignissimos voluptatibus ullam cumque facere, molestiae consequatur vitae? Rerum, est libero.</p> 
+        </div>
+  </div>
+</body>
+
 </html>
