--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <!-- Links -->
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">Kathy</a>
+        <a class="nav-link" href="#kathy">Kathy</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Bill</a>
@@ -33,6 +33,36 @@
           <h1>Group A</h1> 
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus sunt architecto delectus beatae a rerum velit recusandae quasi distinctio dignissimos voluptatibus ullam cumque facere, molestiae consequatur vitae? Rerum, est libero.</p> 
         </div>
+  </div>
+  //kathy
+  <div id="kathy" class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <h1>分林分班 自信成长</h1>
+      </div>
+      <div class="col-md-6">
+        <img src="kathy-img.jpg" alt="">
+      </div>
+    </div>
+    <h2>商品介绍</h2>
+    <div class="row">
+      <div class="col-sm-6 col-lg-3">
+        <h3 class="text-center">7-12月龄</h3>
+        <p>学习版 : 2011/09 - 2012/08生</p>
+      </div>
+      <div class="col-sm-6 col-lg-3">
+        <h3>7-12月龄</h3>
+        <p>学习版 : 2011/09 - 2012/08生</p>
+      </div>
+      <div class="col-sm-6 col-lg-3">
+        <h3>7-12月龄</h3>
+        <p>学习版 : 2011/09 - 2012/08生</p>
+      </div>
+      <div class="col-sm-6 col-lg-3">
+        <h3>7-12月龄</h3>
+        <p>学习版 : 2011/09 - 2012/08生</p>
+      </div>
+    </div>
   </div>
 </body>
 
