--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         <a class="nav-link" href="#kathy">Kathy</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Bill</a>
+        <a class="nav-link" href="personal_page/main.html">Bill</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Rock</a>
