--- a/rock.html
+++ b/rock.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Hello from Rock</title>
-  </head>
-  <body>
-    <h1>Hello I am Rock</h1>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Rock First Responsilbe Webpage</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+  <script src="main.js"></script>
+</head>
+<body>
+  <h1>Hello I am Rock</h1>
+</body>
 </html>
