--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy"
     crossorigin="anonymous">
-<<<<<<< HEAD
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>    <title>Group A Introduction</title>
-=======
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
   <title>group a</title>
->>>>>>> d41fe65dc3b0f3561efdbbd440daa1f1e7b03bb4
+
 </head>
 
 <!--
@@ -51,6 +46,7 @@
 -->
 
     <!-- Links -->
+    <div class="navbar-brand"> Personal Links </div>
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link" href="#kathy">Kathy</a>
@@ -61,7 +57,10 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Rock</a>
       </li>
-    </ul> 
+    </ul>
+    <div class="navbar-brand"> Project Links
+        <a href="kathy_robot.html" class="nav-link">Kathy Robot</a>
+    </div>
 
   </nav>
 <style>
@@ -77,7 +76,7 @@
     </div>
 
   <div class="container">
-<<<<<<< HEAD
+
     <div class="row">
       <div class="col-sm-8">
         <h1>Group A</h1> 
@@ -89,7 +88,7 @@
     </div>
   </div>
 
-  //kathy
+ 
   <div id="kathy" class="container">
     <div class="row">
       <div class="col-md-6">
@@ -101,7 +100,7 @@
     </div>
     <h2>商品介绍</h2>
     <div class="row">
-=======
+
       <div id="demo" class="carousel slide" data-ride="carousel">
 
           <!-- Indicators -->
@@ -132,7 +131,7 @@
   </div>
   <div id="kathy" class="container">
     <div class="row">
->>>>>>> d41fe65dc3b0f3561efdbbd440daa1f1e7b03bb4
+
       <div class="col-sm-6 col-lg-3">
         <h3 class="text-center">7-12月龄</h3>
         <p>学习版 : 2011/09 - 2012/08生</p>
