--- a/public/index.html
+++ b/public/index.html
@@ -14,40 +14,41 @@
 
 </head>
 
-<!--
+
 <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span> 
-          </button>
-          <a class="navbar-brand" href="#">Logo</a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#about">ABOUT</a></li>
-            <li><a href="#kathy">Kathy</a></li>
-            <li><a href="#bill">Bill</a></li>
-            <li><a href="#kai">Kai</a></li>
-            <li><a href="#rock">Rock</a></li>
-          </ul>
-        </div>
-      </div>
+    <!--
+        <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#">Logo</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+              <ul class="nav navbar-nav navbar-right">
+                <li><a href="#about">ABOUT</a></li>
+                <li><a href="#kathy">Kathy</a></li>
+                <li><a href="#bill">Bill</a></li>
+                <li><a href="#kai">Kai</a></li>
+                <li><a href="#rock">Rock</a></li>
+              </ul>
+            </div>
+          </div>
 
-      <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
+          <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
-          <div id="about" class="container-fluid">
-          <div id="kathy" class="container-fluid">
-          <div id="bill" class="container-fluid">
-          <div id="kai" class="container-fluid">
-          <div id="rock" class="container-fluid">
--->
+              <div id="about" class="container-fluid">
+              <div id="kathy" class="container-fluid">
+              <div id="bill" class="container-fluid">
+              <div id="kai" class="container-fluid">
+              <div id="rock" class="container-fluid">
+    -->
 
     <!-- Links -->
-    <div class="navbar-brand"> Personal Links </div>
-    <ul class="navbar-nav">
+
+    <ul class="navbar-nav">Personal Info Links
       <li class="nav-item">
         <a class="nav-link" href="#kathy">Kathy</a>
       </li>
@@ -57,11 +58,24 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Rock</a>
       </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">LiuKai</a>
+        </li>
     </ul>
-    <div class="navbar-brand"> Project Links
-        <a href="kathy_robot.html" class="nav-link">Kathy Robot</a>
-    </div>
-
+    <ul class="navbar-nav">Latest Projects Links
+        <li class="nav-item">
+            <a href="kathy_robot.html" class="nav-link">Kathy</a>
+        </li>
+        <li class="nav-item">
+            <a href="" class="nav-link">Bill</a>
+        </li>
+        <li class="nav-item">
+            <a href="" class="nav-link">Rock</a>
+        </li>
+        <li class="nav-item">
+            <a href="" class="nav-link">LiuKai</a>
+        </li>
+    </ul>
   </nav>
 <style>
     .jumbotron { 
